# weetags-app

./: .gitignore  LICENSE  README.md  asgi.py  boot.sh  configs.yaml.example  pyproject.toml
app/: authentication.py  banner  main.py  middlewares.py  params_handler.py  routes.py
tests/: test_auth.py
