[tool.poetry]
name = "weetags-app"
version = "0.1.0"
description = ""
authors = ["Romain Viry <rom88.viry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sanic = "^23.12.1"
sanic-ext = "^23.12.0"
pyjwt = "^2.7.0"
pyyaml = "^6.0"
attrs = "^23.2.0"
sanic-openapi = "^21.12.0"
weetags = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "==6.2.5"
sanic-testing = "^24.6.0"
pytest-cov = "^3.0.0"
commitizen = "^2.27.1"
yamllint = "^1.35.1"
ruff = "^0.2.2"
safety = "^3.0.1"

[tool.commitizen]
version = "0.1.0"
version_files = [
    "pyproject.toml:^version",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--no-header -l --cov app -m 'not running_server'"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"